public/styles/main.css
:root {
  --duration: 40s;
}

.blobs {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0px;
  pointer-events: none;
  overflow: hidden;
  z-index: 0;
}
  .blobs DIV {
    position: absolute;
    width: 50%;
    height: 50%;
    background-blend-mode: screen;
  }
  .blobs DIV:before {
    position: absolute;
    opacity: 0.1;
    content:"";
    display: block;
    will-change: transform;
  }

  @keyframes rotation-up {
    0% {
      transform: scale(1) rotate(0deg);
    }
    25% {
      transform: scale(1.1) rotate(90deg);
    }
    50% {
      transform: scale(1) rotate(180deg);
    }
    75% {
      transform: scale(1.1) rotate(270deg);
    }
    100% {
      transform: scale(1) rotate(360deg);
    }
  }

  @keyframes rotation-down {
    0% {
      transform: scale(1) rotate(0deg);
    }
    25% {
      transform: scale(0.9) rotate(90deg);
    }
    50% {
      transform: scale(1) rotate(180deg);
    }
    75% {
      transform: scale(0.9) rotate(270deg);
    }
    100% {
      transform: scale(1) rotate(360deg);
    }
  }
  .top-left {
    top: 0px;
    left: 0px;
  }
      .top-left:before {
        background: url(../assets/top-left.svg) no-repeat;
        background-size: 100%;
        width: 1200px;
        height: 1200px;
        animation: rotation-down var(--duration) linear infinite;
        animation-delay: 250ms;
        animation-direction: reverse;
      }

  .top-right {
    top: 0px;
    right: 0px;
  }
    .top-right:before {
      background: url(../assets/top-right.svg) no-repeat;
      background-size: 100%;
      width: 900px;
      height: 900px;
      animation: rotation-up var(--duration) linear infinite;
      animation-delay: 500ms;
    }

  .bottom-left {
    bottom: 0px;
    left: 0px;
  }
    .bottom-left:before {
      background: url(../assets/bottom-left.svg) no-repeat;
      background-size: 100%;
      width: 900px;
      height: 900px;
      animation: rotation-up var(--duration) linear infinite;
      animation-direction: reverse;
    }
 
  .bottom-right {
    bottom: 0px;
    right: 0px;
  }
    .bottom-right:before {
      background: url(../assets/bottom-right.svg) no-repeat;
      background-size: 100%;
      width: 1200px;
      height: 1200px;
      animation: rotation-down var(--duration) linear infinite;
      animation-delay: 750ms;
    }

  SECTION {
    width: 80%;
    min-width: 1100px;
    margin: auto;
    display: grid;
    grid-template-columns: 50% 50%;
    max-width: 1200px;
    top: 0; left: 0; bottom: 0; right: 0;
    position: absolute;
    z-index: 1;
  }

  .info, IMG {
    align-self: center;
    min-width: 475px;
  }

    h2 {
      font: 300 64px/64px 'Barlow Semi Condensed', sans-serif;
      color: #F7A8A8;
      letter-spacing: -1px;
      margin-bottom: 4px;
    }

    h1{
      font: 600 72px/72px 'Barlow Semi Condensed', sans-serif;
      letter-spacing: -1px;
      color: #0D25F9;
      margin-bottom: 78px;
      position: relative;
    }

      h1:after {
        content: "";
        display: block;
        background: url(../assets/mini-blobs.svg) no-repeat;
        width: 38px;
        height: 52px;
        position: absolute;
        left: 326px;
        top: -19px;
      }

    p {
      font: 300 18px/32px 'Barlow', sans-serif;
      color: rgba(0, 0, 0, 0.8);
      margin-bottom: 32px;
    }

    p b {font-weight: 500;}

    IMG {
      justify-self: end;
      width: 580px;
      margin-right: -40px;
    }

.links {
  font: 600 14px/32px 'Barlow Semi Condensed', sans-serif;
  color: #0D25F9;
  box-sizing: border-box;
  padding: 40px 58px;
  margin-top: 79px;
  display: block;
  width: 172px;
  height: 172px;
  background: url(../assets/links.svg) no-repeat;
  margin-left: -58px;
}

.links a, .links a:active {
  color: #0D25F9;
}

.mail {
  background-position-x: -172px;
}

.twitter {
  background-position-x: -344px;
}

.linkedin {
  background-position-x: -516px;
}


@media (min-width: 0px) {
  .top-left:before {
    bottom: -100px;
    right: 50px;
  }

  .top-right:before {
    bottom: 40px;
    left: 90px;
  }

  .bottom-left:before {
    top: 180px;
    right: 80px;
  }

  .bottom-right:before {
    top: 20px;
    left: -40px;
  }
}
/* 
@media (min-width: 1650px) {
  .top-left:before {
    top: -130%;
    right: 10%;
  }

  .top-right:before {
    top: -100%;
    left: 10%;
  }

  .bottom-left:before {
    bottom: -130%;
    right: 10%;
  }

  .bottom-right:before {
    bottom: -160%;
    left: -8%;
  }
}

@media (min-width: 2000px) {
  .top-left:before {
    top: -60%;
    right: 10%;
  }

  .top-right:before {
    top: -40%;
    left: 10%;
  }

  .bottom-left:before {
    bottom: -70%;
    right: 10%;
  }

  .bottom-right:before {
    bottom: -90%;
    left: 0%;
  }
}
 */

